--- a/profile-card-component-main/style.css
+++ b/profile-card-component-main/style.css
@@ -5,7 +5,7 @@
 }
 body {
     margin: 0;
-    font-family: Kumbh Sans, sans-serif;
+    font-family: "Kumbh Sans", "sans-serif";
     background: hsl(185, 75%, 39%);
     background-image: 
         url("images/bg-pattern-top.svg"),
