--- a/todo-app-main/scss/style.scss
+++ b/todo-app-main/scss/style.scss
@@ -12,31 +12,48 @@ $dk-grayish-blue: hsl(234, 11%, 52%);
 $very-dk-grayish-blue: hsl(233, 14%, 35%);
 $very-dk-grayish-blue: hsl(237, 14%, 26%);
 
-$very-lt-gray: hsl(0, 0%, 98%);
-$very-lt-grayish-blue: hsl(236, 33%, 92%);
-$lt-grayish-blue: hsl(233, 11%, 84%);
-$dk-grayish-blue: hsl(236, 9%, 61%);
-$very-dk-grayish-blue: hsl(235, 19%, 35%);
+$very-lt-gray-1: hsl(0, 0%, 98%);
+$very-lt-grayish-blue-1: hsl(236, 33%, 92%);
+$lt-grayish-blue-1: hsl(233, 11%, 84%);
+$dk-grayish-blue-1: hsl(236, 9%, 61%);
+$very-dk-grayish-blue-1: hsl(235, 19%, 35%);
 
 body {
   font-family: "Josefin Sans", sans-serif;
   font-size: 18px;
   color: white;
+  overflow: hidden;
 }
 
 header {
-  height: 25vh;
+  height: 150px;
+  padding: 2rem 5% 2rem;
   background: url("../images/bg-mobile-dark.jpg") no-repeat center center /
     cover;
+  .header-items {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 600px;
+    margin: 0 auto;
+  }
   h3 {
     letter-spacing: 7px;
     font-size: 1.6rem;
-    padding: 2.5rem 1.5rem;
-    color: $very-lt-gray;
+    color: $very-lt-gray-1;
+  }
+  .icon-moon,
+  .icon-sun {
+    display: none;
+    cursor: pointer;
+  }
+
+  .show {
+    display: block;
   }
 }
 main {
-  min-height: 75vh;
+  height: 100vh;
   background: $very-dk-blue;
   font-size: 12px;
 
@@ -44,21 +61,22 @@ main {
     display: none;
   }
   .todo-container {
-    width: 90%;
-    inset: 0;
-    margin: 0 auto;
     position: absolute;
+    inset: 0;
+    width: 90%;
+    max-width: 600px;
+    margin: 0 auto;
     top: 15vh;
   }
 
   .todo-item {
-    background: $very-dk-des-blue;
-    padding: 1rem 1.5rem;
-    color: $lt-grayish-blue;
     display: flex;
     align-items: center;
+    background: $very-dk-des-blue;
+    padding: 0.8em 1.5em;
+    color: $lt-grayish-blue;
     gap: 1rem;
-    min-height: 55px;
+    min-height: 50px;
   }
 
   .new-todo {
@@ -70,11 +88,11 @@ main {
       border: none;
       width: 100%;
       height: 100%;
-      padding-block: 1rem;
+      padding-block: 0.4rem;
       font-size: 12px;
       font-family: inherit;
       background: transparent;
-      color: $very-lt-gray;
+      color: $very-lt-gray-1;
     }
   }
 
@@ -82,7 +100,7 @@ main {
     overflow: hidden;
     margin-bottom: 1rem;
     & > * + * {
-      border-top: 1px solid rgba(white, 0.2);
+      border-top: 1px solid rgba(white, 0.1);
     }
   }
   .new-todo,
@@ -150,8 +168,12 @@ main {
     & > * {
       cursor: pointer;
       font-weight: 700;
+      transition: 0.3s;
+      &:hover {
+        color: $lt-grayish-blue-hover;
+      }
     }
-    & > *.active {
+    & > *.selected {
       color: $bright-blue;
     }
   }
@@ -159,7 +181,69 @@ main {
 
 body.light {
   header {
-    background: $check-bg;
+    background-image: url(../images/bg-mobile-light.jpg);
     color: $very-dk-grayish-blue;
+  }
+  main {
+    background: $very-lt-grayish-blue-1;
+    .todo-item {
+      background: $very-lt-gray-1;
+    }
+    .new-item,
+    .todo-text {
+      color: $very-dk-grayish-blue-1;
+    }
+    .circle {
+      border-color: rgba($dk-grayish-blue-1, 0.2);
+    }
+
+    .todo-text.complete {
+      color: $lt-grayish-blue-1;
+    }
+
+    .last,
+    .todo-watcher {
+      color: $dk-grayish-blue-1;
+    }
+
+    .todos {
+      & > * + * {
+        border-top: 1px solid rgba($very-dk-grayish-blue-1, 0.2);
+      }
+    }
+    .todo-watcher {
+      span:hover {
+        color: $very-dk-grayish-blue-1;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  header {
+    height: 280px;
+    background-image: url(../images/bg-desktop-dark.jpg);
+    h3 {
+      padding: 3rem 0;
+      font-size: 2.2rem;
+    }
+  }
+  main {
+    font-size: 14px;
+    .todo-container {
+      top: 200px;
+    }
+    .todo-item,
+    .new-todo {
+      .new-item {
+        font-size: 14px;
+      }
+    }
+  }
+
+  body.light {
+    header {
+      background-image: url(../images/bg-desktop-light.jpg);
+    }
   }
 }
