--- a/todo-app-main/css/style.css
+++ b/todo-app-main/css/style.css
@@ -81,7 +81,7 @@ header .header-items {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  max-width: 600px;
+  max-width: 550px;
   margin: 0 auto;
 }
 
@@ -115,7 +115,7 @@ main .todo-container {
   position: absolute;
   inset: 0;
   width: 90%;
-  max-width: 600px;
+  max-width: 550px;
   margin: 0 auto;
   top: 15vh;
 }
@@ -215,6 +215,7 @@ main img {
 
 main .todo-text {
   margin: 0;
+  cursor: pointer;
 }
 
 main .todo-text.complete {
@@ -308,11 +309,13 @@ body.light main .todo-watcher span:hover {
     font-size: 14px;
   }
   main .todo-container {
-    top: 200px;
+    top: 180px;
   }
-  main .todo-item .new-item,
   main .new-todo .new-item {
     font-size: 14px;
+  }
+  main .todo-item {
+    padding-block: 1rem;
   }
   body.light header {
     background-image: url(../images/bg-desktop-light.jpg);
