--- a/rest-countries-api-with-color-theme-switcher-master/style.css
+++ b/rest-countries-api-with-color-theme-switcher-master/style.css
@@ -16,7 +16,7 @@ body {
   line-height: 1.6;
   font-family: "Nunito Sans", sans-serif;
   background: var(--clr-bg);
-  color: white;
+  color: var(--clr-text);
   font-size: 14px;
   overflow-x: hidden;
 }
@@ -25,18 +25,24 @@ body.light {
   --crl-primary: hsl(0, 0%, 100%);
   --clr-bg: hsl(0, 0%, 98%);
   --clr-text: hsl(200, 15%, 8%);
-  --clr-input: hsl(0, 0%, 52%);
+  --clr-input: hsl(0, 16%, 85%);
+  --clr-search: hsl(0, 0%, 85%);
+  --clr-text-lighter: hsla(200, 15%, 8%, 0.2);
 }
 body.dark {
   --crl-primary: hsl(209, 23%, 22%);
   --clr-bg: hsl(207, 26%, 17%);
   --clr-text: hsl(0, 0%, 100%);
+  --clr-search: hsl(209, 32%, 31%);
+  --clr-text-lighter: hsla(0, 0%, 100%, 0.2);
 }
 
 header,
 input,
 .select-wrapper,
-.card {
+.card,
+.results,
+.btn {
   box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.1);
 }
 
@@ -48,13 +54,21 @@ header {
   background: var(--crl-primary);
 }
 
+.theme {
+  cursor: pointer;
+}
+
+.theme i {
+  margin-right: 0.4rem;
+}
+
 main {
   width: 86%;
   margin: 0 auto;
   padding-block: 3rem;
 }
 
-#app {
+.main-container {
   position: relative;
 }
 
@@ -75,6 +89,10 @@ main {
   color: var(--clr-text);
 }
 
+.top-section select {
+  cursor: pointer;
+}
+
 .top-section .select-wrapper {
   background: var(--crl-primary);
   padding: 0 1rem;
@@ -85,6 +103,39 @@ main {
   border-radius: var(--radius);
   width: 30%;
   padding-left: 4rem;
+}
+
+.results {
+  position: absolute;
+  top: 3rem;
+  left: 0;
+  width: 30%;
+  z-index: 100;
+  background: var(--clr-search);
+  margin-top: 0.8rem;
+  border-radius: var(--radius);
+  /* background: red; */
+}
+
+.results ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+.results ul > * + * {
+  border-top: 1px solid var(--clr-text-lighter);
+}
+
+.results li {
+  padding: 1rem 4rem;
+  cursor: pointer;
+}
+
+.results li:hover {
+  opacity: 0.7;
+  background: var(--crl-primary);
 }
 
 .top-section option {
@@ -165,6 +216,96 @@ img {
   background: var(--clr-bg);
   /* background: red; */
   box-shadow: none;
+}
+
+.btn {
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  background: var(--crl-primary);
+  color: var(--clr-text);
+  padding: 0.7em 2.7em;
+  font-family: inherit;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: opacity 0.2s;
+}
+.btn i {
+  margin-right: 0.5rem;
+}
+.btn:hover {
+  opacity: 0.7;
+}
+
+.detail-page__container {
+  display: flex;
+  margin-top: 4rem;
+}
+
+.big-flag {
+  width: 40%;
+  box-shadow: 0 0 0 1rem rgba(0, 0, 0, 0.05);
+}
+.info-container {
+  width: 60%;
+  padding: 0 10%;
+  font-size: 1.9rem;
+}
+
+.info-container .country-name {
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
+}
+
+.info-container .info__row {
+  margin-bottom: 0.5rem;
+}
+.info-container .type,
+.info-container .value {
+  font-size: 14px;
+}
+
+.info-container .right {
+  margin-left: auto;
+}
+
+.country-name {
+  margin: 0;
+  padding: 0;
+}
+
+.info-stats {
+  display: flex;
+  gap: 3rem;
+}
+
+@media screen and (max-width: 650px) {
+  header h2 {
+    font-size: 1.2rem;
+  }
+  .top-section {
+    flex-direction: column;
+    gap: 2.5rem;
+  }
+  .results,
+  .top-section input,
+  .big-flag {
+    width: 100%;
+  }
+
+  .detail-page__container {
+    flex-direction: column;
+  }
+
+  .info-container {
+    padding: 2rem 0;
+  }
+  .info-container .right {
+    margin: 0;
+  }
+  .info-stats {
+    flex-direction: column;
+  }
 }
 
 /* UTILS */
